k8s/app/deployment.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  namespace: default
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: app:latest
        ports:
        - containerPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: default
  labels:
    app: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app1
        image: app:latest
        ports:
        - containerPort: 5000
